Fixed - bug 330296: [Spinner] Spinner layout broken in Examples demo https://bugs.eclipse.org/bugs/show_bug.cgi?id=330296

--- a/tests/org.eclipse.rap.rwt.themes.test/src/org/eclipse/rap/rwt/themes/test/business/Spinner.test.css
+++ b/tests/org.eclipse.rap.rwt.themes.test/src/org/eclipse/rap/rwt/themes/test/business/Spinner.test.css
@@ -11,11 +11,15 @@
 /* Spinner */
 
 Spinner {
-  border: 1px solid #a4a4a4;
-  border-radius: 2px 2px 2px 2px;
+  border: none;
   padding: 1px 2px;
   color: #464a4e;
   background-color: rgb( 252, 252, 252 );
+}
+
+Spinner[BORDER] {
+  border: 1px solid #a4a4a4;
+  border-radius: 2px 2px 2px 2px;
 }
 
 Spinner-DownButton {
