--- a/tests/org.eclipse.rap.rwt.themes.test/src/org/eclipse/rap/rwt/themes/test/rwtdefault/Spinner.test.css
+++ b/tests/org.eclipse.rap.rwt.themes.test/src/org/eclipse/rap/rwt/themes/test/rwtdefault/Spinner.test.css
@@ -11,8 +11,7 @@
 /* Spinner default theme */
 
 Spinner {
-  border: 1px solid #a4a4a4;
-  border-radius: 2px 2px 2px 2px;
+  border: none;
   padding: 1px 2px;
   color: #464a4e;
   background-color: rgb( 252, 252, 252 );
@@ -23,7 +22,8 @@ Spinner-Field {
 }
 
 Spinner[BORDER] {
-  border: 1px inset;
+  border: 1px solid #a4a4a4;
+  border-radius: 2px 2px 2px 2px;
 }
 
 Spinner-UpButton {
